--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,12 +224,29 @@ input[type=submit] {
     padding-right: 24px;
   }
   .work {
-  width: 264px;
+    width: 264px;
   }
-
 }
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 768px) {
+  .main-section {
+    width: 99%;
+    margin-left: 5px;
+  }
+  .auth-image {
+    width: 300px;
+  }
+  #logo {
+    margin-left: -45px;
+  }
+  nav {
+    margin-right: -52px
+  }
+  #masthead {
+    width: 768px;
+    margin: -8px -8px 28px;
+  }
+}
 
 /* @media screen and (max-width: 640px) {
   #masthead {
